--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_2/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_2/css/spark-layout.css
@@ -552,6 +552,8 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 	top: 50px;
 }
 
+.nav li:first-child a {padding-left: 0px !important;}
+
 .nav li li a {
 	display: block;
 	padding: 10px;
