--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_2/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_2/css/invessenceCustom.css
@@ -5148,3 +5148,5 @@ main.customtabs {
 .ui-datatable .ui-datagrid-header, .ui-datatable .ui-datatable-header, .ui-datatable .ui-datatable-subtable-header, .ui-datatable .ui-datatable-summaryrow
 { background-color: #009abb !important;}
 
+.backButtonLP {color: #A4332F !important;}
+
