--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenu.xhtml
@@ -13,7 +13,7 @@
                                  actionListener="#{uiLayout.defaultHome}"/>
             </f:facet>
 
-            <p:menuitem value="New Account" rendered="#{webutil.hasAccess('USER')}"
+            <p:menuitem value="New Account sag" rendered="#{webutil.hasAccess('USER')}"
                         actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
 
             <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.hasRole('DEMO')}"
