Code check in By Sagar for Asset allocation and report changes

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -245,7 +245,7 @@
                 <ui:fragment rendered="#{webutil.hasMenu('Reports') and webutil.hasAccess('User')}">
                 <li>
                     <p:commandLink rendered="true" id="menureportsbtn"
-                                   actionListener="#{uiLayout.doMenuAction('consumer', 'creports.xhtml')}">
+                                   actionListener="#{uiLayout.doMenuAction('consumer', 'creportsN.xhtml')}">
                         <h:outputText value="Reports"/>
                     </p:commandLink>
                 </li>
