Abhang 08/09/2017 CRM code committing

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_7/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_7/css/tcm.css
@@ -4524,3 +4524,9 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
         margin: 5px;}
 }
 
+#redTailWidgetDiv iframe{
+width: 100%;
+height: 120vh;
+box-shadow: none;
+border: none;
+margin-top: 20px;}
