--- a/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_4/css/spark-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/spark-layout/1_4/css/spark-layout.css
@@ -741,5 +741,11 @@ a.ui-commandlink{text-decoration: none !important; margin-right: 5px;}
 }
 
 
+#redTailWidgetDiv iframe{
+	width: 100%;
+	height: 120vh;
+	box-shadow: none;
+	border: none;
+	margin-top: 20px;}
 
 
