--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_3/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_3/css/invessenceCustom.css
@@ -123,6 +123,8 @@ img.riskImage:hover {
 /**Button save and cancel**/
 
 @media (min-width: 320px) and (max-width: 450px) {
+
+
     .CommonBtnWidthSave {
         float: none !important;
     }
@@ -3429,6 +3431,7 @@ a {
 
 .FullContainer {
     margin: 10px 0px;
+    padding-top: 50px;
 }
 
 .RightPanel {
@@ -3585,9 +3588,9 @@ span > input {
 }
 
 .finetuneBtnBlock {
-    margin-top: 10px;
+    margin-top: -7px;
     position: absolute;
-    left: 27%;
+    left: 9%;
 }
 
 .fineTuneBlock {
@@ -5241,6 +5244,14 @@ background-color: transparent !important;
 .customTable_reports td {padding: 10px !important;}
 
 
+.userHeadingUobDash {
+font-size: 18px;
+background-color: #eee;
+padding: 10px;
+color: #777777;
+font-weight: 100;
+}
+
 .box h1{
     font-size:1.5em;
     color: #2f7a5d;
@@ -5304,6 +5315,281 @@ background-color: transparent !important;
     background-color: #5fcf80;
 }
 
+.progressbarsag {
+
+height: 50px;
+position: absolute;
+width: 70%;
+margin: -50px auto;
+margin-left: 15%;
+}
+
+
+
+
+.loadPgNm {
+    /* margin-bottom: 30px; */
+    overflow: hidden;
+    counter-reset: step;
+    margin: -20px auto;
+    padding-bottom: 5px;
+    text-align: center;
+    position: relative;
+
+
+}
+
+.loadPgNm:after {
+    /* margin-bottom: 30px; */
+    content: "";
+    counter-increment: step;
+    width: 100%;
+    height: 4px;
+    top: 13px;
+    /* line-height: 24px; */
+    display: block;
+    font-size: 10px;
+    color: #fff;
+    background: #a7a5c6;
+    margin-top: 11px;
+    /* border-radius: 50%; */
+
+
+}
+.loadPgNm span {
+    list-style-type: none;
+    color: #312e2e;
+    text-transform: uppercase;
+    font-size: 13px;
+    width: 25%;
+    float: left;
+    position: relative;
+    line-height: 32px;
+}
+
+
+
+
+.loadPgNm span:before {
+    content: "";
+    width: 100%;
+    height: 4px;
+    top: 13px;
+    /* line-height: 24px; */
+    display: block;
+    font-size: 10px;
+    color: #fff;
+    background: transparent;
+    /* border-radius: 50%; */
+    margin: 11px auto 5px auto;
+}
+/*progressbar connectors*/
+.loadPgNm span:after {
+
+    /* width: 100%; */
+    /* height: 4px; */
+    /* background: #427AA1; */
+    position: absolute;
+    left: -54%;
+    /* top: 11px; */
+    z-index: -1;
+    margin-top: -8px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 10px 0 10px;
+    border-color: #a7a5c6 transparent transparent transparent;
+}
+
+.loadPgNm span:after{
+    animation: animationFrames linear 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: animationFrames linear 1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -moz-animation: animationFrames linear 1s;
+    -moz-animation-iteration-count: 1;
+    -moz-transform-origin: 50% 50%;
+    -o-animation: animationFrames linear 1s;
+    -o-animation-iteration-count: 1;
+    -o-transform-origin: 50% 50%;
+    -ms-animation: animationFrames linear 1s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%;
+}
+
+@keyframes animationFrames{
+    0% {
+        transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    15% {
+        transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+@-moz-keyframes animationFrames{
+    0% {
+        -moz-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        -moz-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    15% {
+        -moz-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        -moz-transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        -moz-transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        -moz-transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        -moz-transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        -moz-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+@-webkit-keyframes animationFrames {
+    0% {
+        -webkit-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        -webkit-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    15% {
+        -webkit-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        -webkit-transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        -webkit-transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        -webkit-transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        -webkit-transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        -webkit-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+@-o-keyframes animationFrames {
+    0% {
+        -o-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        -o-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    15% {
+        -o-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        -o-transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        -o-transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        -o-transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        -o-transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        -o-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+@-ms-keyframes animationFrames {
+    0% {
+        -ms-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        -ms-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    15% {
+        -ms-transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        -ms-transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        -ms-transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        -ms-transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        -ms-transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        -ms-transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+/*marking active/completed steps green*/
+/*The number of the step and the connector before it = green*/
+.loadPgNm span.active:before,  #progressbar li.active:after, .loadPgNm span.done:before {
+    background: #312e2e;
+    color: white;
+}
+
+.loadPgNm span.active:after {
+    content: '';
+    /* width: 100%; */
+    /* height: 4px; */
+    /* background: #427AA1; */
+    position: absolute;
+    left: 46%;
+    /* top: 11px; */
+    z-index: -1;
+    margin-top: -8px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 10px 0 10px;
+    border-color: #312e2e transparent transparent transparent;
+}
+
+@media (min-width: 320px) and (max-width: 450px) {
+
+    .progressbarsag {
+
+        height: 50px;
+        position: absolute;
+        width: 96%;
+        margin: -50px auto;
+        margin-left: 1%;
+    }
+
+}
 
 
 
