Code check in By Sagar for Asset Allocation UI changes

--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_3/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_3/css/invessenceCustom.css
@@ -4528,7 +4528,8 @@ main.customtabs {
 .customtabs #tab1:checked ~ #content1,
 .customtabs #tab2:checked ~ #content2,
 .customtabs #tab3:checked ~ #content3,
-.customtabs #tab4:checked ~ #content4 {
+.customtabs #tab4:checked ~ #content4,
+.customtabs #tab5:checked ~ #content5{
     display: block;
 }
 
