--- a/Invessence/modules/web/src/main/webapp/resources/invessence-layout/1_4/css/invessence-layout.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence-layout/1_4/css/invessence-layout.css
@@ -435,20 +435,27 @@ box-shadow: 0px 1px 0px 0px rgba(70,145,91,0.8);}
 .Wid40 input {width: 40% !important;}
 
 .footerContext {    background-color: #262626;
+	position:fixed;
+	bottom: 0px;
 	border-radius: 0px;
 	color: #fff;
 	padding: 5px 0px;
 	text-align: right;
 	/* padding-right: 20px; */
 	width: 100%;
-margin: 0 !important; box-shadow: none !important;;}
+	z-index:999;
+margin: 0 !important; box-shadow: none !important;}
+
+.zopim{bottom:54px !important;}
+.borT0{border-top:0;}
+.pdT0{padding-top:0;}
 
 .footerContext > div {
 	color: #fff;
 
 	text-align: right;
 	/* padding-right: 20px; */
-	width: 99%;}
+	width: 99.95%;}
 
 .footerlinks {padding: 0;
 	margin: 0;
