--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -34,8 +34,13 @@
         </ui:insert>
 
 
-        <div class="layout-portlets-box footerContext" style="background-color: #4c4c4c !important; border-top: 2px solid #bfbfc0;">
-            <div class="Container100 Responsive100">
+       <!-- <div class="layout-portlets-box footerContext">
+
+            </div>-->
+        </div>
+
+        <div class="layout-portlets-box footerContext pdT0 borT0">
+            <div class="Container100 Responsive100" style="background-color: #4c4c4c !important; border-top: 2px solid #bfbfc0;">
                 <div class="ContainerIndent" style="padding: 0px;">
                     <div id="ceForm:j_idt277" class="ui-outputpanel ui-widget">
                         <ul class="footerlinks">
@@ -56,13 +61,9 @@
                             where Invessence is not registered
 
                         </p> -->
-                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="layout-portlets-box footerContext">
             <div class="Container100 Responsive100">
                 <ui:fragment rendered="#{webutil.hasSSL}">
                         <div class="ShowOnDesktopTablet">
