--- a/Invessence/modules/web/src/main/webapp/template/html/UOBKH-Activated.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/UOBKH-Activated.html
@@ -1537,7 +1537,7 @@
                     <div class="email-footer__address--inline">
                         <p>
                             If you have any questions, please contact us at <a
-                                href="mailto:support@uwealth.com.sg">support@uwealth.com.sg</a>
+                                href="mailto:support@uobkh.com">support@uwealth.com.sg</a>
                         </p>
                         <div>
                             UOB Kay Hian<br>xxx Xxxxxx Xxxx Xxxx, Xxxx, XX xxxxx<br>Phone:
