commited by sagar for uI changes

--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessenceCustom.css
@@ -4561,6 +4561,57 @@ main.customtabs {
     display: block;
 }
 
+.bgcontain{
+    background: #f7f7f7 !important;
+    padding:10px 10px 10px 10px !important;
+}
+
+.bgcontain .awBlock .titleContentPanel .contentSecond .ui-accordion{
+    background: #f7f7f7 !important;
+}
+
+.ui-selectonemenu {
+    float:right !important;
+    margin-top:-6px !important;
+    width:170px !important;
+    margin-left:5px !important;
+}
+
+.ui-selectoneradio{
+    float:right !important;
+    margin: -17px 0 0 5px !important;
+}
+
+.uploadbuttons .ui-fileupload .ui-fileupload-buttonbar button.ui-fileupload-cancel{
+    display: none !important;
+}
+.uploadtable, .validtable{
+    width:100% !important;
+    position: relative !important;
+    text-align: center !important;
+    margin: 0 auto !important;
+    float: left !important;
+    display: block !important;
+}
+.uploadtable .ui-datatable, .validtable .ui-datatable{
+width:100% !important;
+    margin: 0 auto !important;
+    max-width: 900px !important;
+}
+
+.uploadradiobutton .ui-outputlabel table.ui-selectoneradio tbody tr td label{
+    padding:15px 26px 15px 0px !important;
+}
+
+.uploadradiobutton label input{
+    float:right;
+    margin-top: -7px !important;
+}
+
+.ui-slider-vertical{
+    height:94% !important;
+    margin-top:0px !important;
+}
 @media screen and (max-width: 650px) {
     .customtabs label {
         font-size: 0;
